--- a/ANN-Churn-Prediction/Prediction using ANN.ipynb
+++ b/ANN-Churn-Prediction/Prediction using ANN.ipynb
@@ -19,11 +19,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From e:\\UDemy Final\\ANN Classification\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
+      "2025-03-14 19:42:31.965232: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-03-14 19:42:31.981600: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-03-14 19:42:32.081793: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1741981352.189188   26288 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1741981352.219300   26288 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1741981352.286732   26288 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1741981352.286762   26288 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1741981352.286766   26288 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1741981352.286769   26288 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-03-14 19:42:32.307513: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -48,18 +58,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-14 19:43:17.440468: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    }
+   ],
    "source": [
     "### Load the trained model, scaler pickle,onehot\n",
-    "model=load_model('model.h5')\n",
+    "model=load_model('model_new.h5')\n",
     "\n",
     "## load the encoder and scaler\n",
-    "with open('onehot_encoder_geo.pkl','rb') as file:\n",
+    "with open('onehot_encoder_geo_new.pkl','rb') as file:\n",
     "    label_encoder_geo=pickle.load(file)\n",
     "\n",
-    "with open('label_encoder_gender.pkl', 'rb') as file:\n",
+    "with open('label_encoder_gender_new.pkl', 'rb') as file:\n",
     "    label_encoder_gender = pickle.load(file)\n",
     "\n",
     "with open('scaler.pkl', 'rb') as file:\n",
@@ -79,22 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example input data\n",
     "input_data = {\n",
-    "    'CreditScore': 600,\n",
-    "    'Geography': 'France',\n",
-    "    'Gender': 'Male',\n",
-    "    'Age': 40,\n",
-    "    'Tenure': 3,\n",
-    "    'Balance': 60000,\n",
-    "    'NumOfProducts': 2,\n",
-    "    'HasCrCard': 1,\n",
+    "    'CreditScore': 700,\n",
+    "    'Geography': 'Germany',\n",
+    "    'Gender': 'Female',\n",
+    "    'Age': 25,\n",
+    "    'Tenure': 2,\n",
+    "    'Balance': 50000,\n",
+    "    'NumOfProducts': 1,\n",
+    "    'HasCrCard': 0,\n",
     "    'IsActiveMember': 1,\n",
-    "    'EstimatedSalary': 50000\n",
+    "    'EstimatedSalary': 60000\n",
     "}"
    ]
   },
@@ -107,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "e:\\UDemy Final\\ANN Classification\\venv\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
+      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -147,8 +166,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -157,10 +176,10 @@
       ],
       "text/plain": [
        "   Geography_France  Geography_Germany  Geography_Spain\n",
-       "0               1.0                0.0              0.0"
+       "0               0.0                1.0              0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -220,30 +239,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>600</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>40</td>\n",
-       "      <td>3</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>700</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>25</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>50000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>60000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   CreditScore Geography Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
-       "0          600    France   Male   40       3    60000              2   \n",
+       "   CreditScore Geography  Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
+       "0          700   Germany  Female   25       2    50000              1   \n",
        "\n",
        "   HasCrCard  IsActiveMember  EstimatedSalary  \n",
-       "0          1               1            50000  "
+       "0          0               1            60000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -294,16 +313,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>600</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>3</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>700</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>50000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>60000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -311,13 +330,13 @@
       ],
       "text/plain": [
        "   CreditScore Geography  Gender  Age  Tenure  Balance  NumOfProducts  \\\n",
-       "0          600    France       1   40       3    60000              2   \n",
+       "0          700   Germany       0   25       2    50000              1   \n",
        "\n",
        "   HasCrCard  IsActiveMember  EstimatedSalary  \n",
-       "0          1               1            50000  "
+       "0          0               1            60000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -371,17 +390,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>600</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>3</td>\n",
-       "      <td>60000</td>\n",
+       "      <td>700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>50000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>60000</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -390,16 +409,16 @@
       ],
       "text/plain": [
        "   CreditScore  Gender  Age  Tenure  Balance  NumOfProducts  HasCrCard  \\\n",
-       "0          600       1   40       3    60000              2          1   \n",
+       "0          700       0   25       2    50000              1          0   \n",
        "\n",
        "   IsActiveMember  EstimatedSalary  Geography_France  Geography_Germany  \\\n",
-       "0               1            50000               1.0                0.0   \n",
+       "0               1            60000               0.0                1.0   \n",
        "\n",
        "   Geography_Spain  \n",
        "0              0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,18 +438,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.53598516,  0.91324755,  0.10479359, -0.69539349, -0.25781119,\n",
-       "         0.80843615,  0.64920267,  0.97481699, -0.87683221,  1.00150113,\n",
-       "        -0.57946723, -0.57638802]])"
+       "array([[ 0.50178794, -1.09499335, -1.32129295, -1.04241787, -0.41792108,\n",
+       "        -0.91668767, -1.54035103,  0.97481699, -0.70296551, -0.99850112,\n",
+       "         1.72572313, -0.57638802]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,23 +472,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 94ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 23ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.02973952]], dtype=float32)"
+       "array([[0.11372748]], dtype=float32)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,16 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.029739516"
+       "np.float32(0.11372748)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
